remove deprecated call to integer(int)